# esp-joylink

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Kconfig  Makefile  README.md  component.mk  gen_misc.sh
components/joylink_cloud/: component.mk
components/joylink_cloud/docs/: SoftAP代码和详细资料.rar
components/joylink_cloud/joylink_dev_sdk_C_2.0.8/: .README.swp  Makefile
components/port/ble/: joylink_ble.c
components/port/include/: esp_joylink.h  feature.h
components/port/softap/: joylink_softap.c
config/mass_mfg/: multipule_mfg_config.csv  multipule_mfg_values.csv  single_mfg_config.csv
docs/md/: 量产说明.md
driver/: gpio.c  hw_timer.c  uart.c
esp8266-rtos-sdk/examples/ssc/: Makefile  make_lib.sh
esp8266-rtos-sdk/include/espressif/: esp_common.h
esp8266-rtos-sdk/include/lwip/: lwipopts.h
esp8266-rtos-sdk/ld/: eagle.app.v6.common.ld
example/: Makefile  esp32_partitions_jd.csv
example/main/: Kconfig  app_main.c
example_project/: CMakeLists.txt  Makefile  sdkconfig.defaults
example_project/main/: Kconfig  app_main.c  esp_joylink_app.c  esp_joylink_app.h
examples/light_demo/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
examples/light_demo/button/: CMakeLists.txt
examples/light_demo/main/: CMakeLists.txt  Kconfig  app_main.c  esp_joylink_app.c
include/driver/: gpio.h  hw_timer.h  uart.h
joylink_cloud/: 1component.mk  component.mk
joylink_cloud/docs/: JoyLink2.0_SDK_C.rar  一键配置代码和详细资料.rar
joylink_cloud/joylink_ble/include/: joylink_sdk.h
joylink_cloud/joylink_dev_sdk/: Makefile
joylink_cloud/joylink_dev_sdk/auth/: joylink3_auth_uECC.c  joylink3_auth_uECC_curve-specific.inc  joylink3_auth_uECC_platform-specific.inc  joylink_aes.c  joylink_aes.h  joylink_crypt.h  stdint.h  test.c
joylink_cloud/joylink_dev_sdk/config/: joylink_config_handle.c  joylink_config_handle.h  joylink_smart_config.c  joylink_smart_config.h  joylink_smart_config.htxt  joylink_smart_config.txt  joylink_smnt_adp.h  joylink_thunder_slave_sdk.c  joylink_thunder_slave_sdk.h
joylink_cloud/joylink_dev_sdk/joylink/: Makefile  joylink.h  joylink_cloud_log.c  joylink_cloud_log.h  joylink_dev_active.c  joylink_dev_active.h  joylink_dev_lan.c  joylink_dev_sdk.c  joylink_dev_server.c  joylink_log.h  joylink_packets.c  joylink_security.c  joylink_sub_dev.c  joylink_sub_dev.h  joylink_utils.c  joylink_utils.h
joylink_cloud/joylink_dev_sdk/json/: joylink_json.c
joylink_cloud/joylink_dev_sdk_2.0.09/: Makefile.rule  module.mk
joylink_cloud/joylink_dev_sdk_2.0.09/agent/: Makefile  joylink_agent_json.c
joylink_cloud/joylink_dev_sdk_2.0.09/auth/: Makefile  joylink_auth_uECC.c  joylink_crypt.c
joylink_cloud/joylink_dev_sdk_2.0.09/config/: Makefile  joylink_config_handle.c  joylink_config_handle.h  joylink_probe.c  joylink_probe.h  joylink_smart_config.h  joylink_thunder.h  joylink_thunder_slave_sdk.c  joylink_thunder_slave_sdk.h  joylink_wlan_probe.h
joylink_cloud/joylink_dev_sdk_2.0.09/example/: joylink_dev.h  joylink_extern.c  joylink_extern.h  joylink_extern_json.c  joylink_extern_ota.c  joylink_extern_ota.h  joylink_extern_sub_dev.c  joylink_extern_sub_dev.h
joylink_cloud/joylink_dev_sdk_2.0.09/joylink/: .joylink_dev_lan.c.swp  .joylink_utils.c.swp  Makefile  joylink.h  joylink_dev_lan.c  joylink_dev_sdk.c  joylink_dev_server.c  joylink_dev_timer.c  joylink_packets.c  joylink_security.h  joylink_sub_dev.c  joylink_sub_dev.h  joylink_utils.c
joylink_cloud/joylink_dev_sdk_2.0.09/json/: Makefile  cJSON.c  joylink_json.c  joylink_json.h  joylink_json_sub_dev.c
joylink_cloud/joylink_dev_sdk_2.0.12/agent/: joylink_agent.c  test.c
joylink_cloud/joylink_dev_sdk_2.0.12/auth/: joylink3_auth_uECC.h  joylink3_auth_uECC_types.h  joylink_aes.h
joylink_cloud/joylink_dev_sdk_2.0.12/config/: joylink_syshdr.h
joylink_cloud/joylink_dev_sdk_2.0.12/joylink/: joylink.h  joylink_dev_lan.c  joylink_dev_sdk.c  joylink_utils.h
joylink_cloud/joylink_dev_sdk_2.0.12/json/: joylink_json.c  joylink_json_sub_dev.c
joylink_cloud/joylink_dev_sdk_C_2.0.8/: Makefile.rule  RELEASENOTES  module.mk
joylink_cloud/joylink_dev_sdk_C_2.0.8/agent/: joylink_adapter_net.c  joylink_agent_gw_2_cloud.c
joylink_cloud/joylink_dev_sdk_C_2.0.8/auth/: Makefile  joylink_crypt.c
joylink_cloud/joylink_dev_sdk_C_2.0.8/example/: Makefile  joylink_dev.h  joylink_extern.h  joylink_extern_json.c  joylink_extern_json.h  joylink_extern_ota.h  joylink_extern_sub_dev.c  joylink_extern_user.c
joylink_cloud/joylink_dev_sdk_C_2.0.8/joylink/: .joylink_dev_server.c.swp  joylink.h  joylink_dev_lan.c  joylink_dev_sdk.c  joylink_dev_server.c  test.c
joylink_cloud/joylink_smnt_v3.0.11/: joylink_smnt.c
joylink_cloud/joylink_softap/: joylink_softap.c  joylink_softap.h  joylink_softap_util.h
joylink_cloud/joylink_thunder/: joylink_probe.c  joylink_smnt.c  joylink_smnt.h  joylink_syshdr.h  joylink_thunder_slave_sdk.c  joylink_thunder_slave_sdk.h
joylink_dev_sdk/: RELEASENOTES
joylink_dev_sdk/example/: joylink_extern.c  joylink_extern.h  joylink_extern_json.c  joylink_extern_ota.c  joylink_extern_ota.h  joylink_extern_sub_dev.c  joylink_extern_sub_dev.h  joylink_extern_user.c  test.c
joylink_dev_sdk/scripts/: config.mk
port/: joylink_ble.c  joylink_upgrade.c
port/app/: joylink_app.c
port/ble/: joylink_ble.c
port/include/: esp_joylink.h  ifaddrs.h  joylink_ble.h  joylink_upgrade.h
port/jdinnet/: jd_innet.c
port/softap/: joylink_softap_config.c
user/: Makefile  app_joylink.c  user_main.c
utilities/: Makefile
utilities/adapter/: Makefile  adapter.c  adapter.h  esp_err.h
utilities/button/: Makefile  button.c  button.h
utilities/ringbuffer/: Makefile  simple_ringbuffer.c  simple_ringbuffer.h
utilities/status_led/: Makefile  led.c  led.h
(+102 files in other folders)
